--- a/assay/{{ cookiecutter.__assay_id }}/metadata.yml
+++ b/assay/{{ cookiecutter.__assay_id }}/metadata.yml
@@ -2,8 +2,15 @@ assay_id: {{ cookiecutter.__assay_id }}
 owner: {{ cookiecutter.owner }}
 date: {{ cookiecutter.date }}
 codename: {{ cookiecutter. codename }}
+technology: {{ cookiecutter.technology }}
+sequencer: {{ cookiecutter.sequencer }}
+seq_kit: {{ cookiecutter.seq_kit }}
+n_samples: {{ cookiecutter.n_samples }}
+is_paired: {{ cookiecutter.is_paired }}
 pipeline: {{ cookiecutter.pipeline }}
 processed_by: {{ cookiecutter.processed_by }}
 genomics_path: {{ cookiecutter.genomics_path }}
 organism: {{ cookiecutter.organism }}
+organism_subgroup: {{ cookiecutter.organism_subgroup }}
 origin: {{ cookiecutter.origin }}
+genomics_path: {{ cookiecutter.genomics_path }}
