--- a/project/{{ cookiecutter.__project_name }}/metadata.yml
+++ b/project/{{ cookiecutter.__project_name }}/metadata.yml
@@ -1,4 +1,4 @@
-project: {{ cookiecutter.project }}
+project: {{ cookiecutter.__project_name }}
 author: {{ cookiecutter.author }}
 date: {{ cookiecutter.date }}
 description: {{ cookiecutter.description }}
