fix: added project name/id to metadata.yml

--- a/assay/{{ cookiecutter.__assay_id }}/metadata.yml
+++ b/assay/{{ cookiecutter.__assay_id }}/metadata.yml
@@ -1,4 +1,5 @@
 assay_id: {{ cookiecutter.__assay_id }}
+assay: {{ cookiecutter.assay }}
 owner: {{ cookiecutter.owner }}
 date: {{ cookiecutter.date }}
 codename: {{ cookiecutter.codename }}
