feat: added schema_version field

--- a/assay/{{ cookiecutter.__assay_id }}/metadata.yml
+++ b/assay/{{ cookiecutter.__assay_id }}/metadata.yml
@@ -1,3 +1,4 @@
+schema_version: {{ cookiecutter.__schema_version }}
 assay_id: {{ cookiecutter.__assay_id }}
 assay: {{ cookiecutter.assay }}
 owner: {{ cookiecutter.owner }}
