fix: quote short and long description

--- a/assay/{{ cookiecutter.__assay_id }}/description.yml
+++ b/assay/{{ cookiecutter.__assay_id }}/description.yml
@@ -1,2 +1,2 @@
-short_desc: {{ cookiecutter.short_desc }}
-long_desc: {{ cookiecutter.long_desc }}
+short_desc: "{{ cookiecutter.short_desc }}"
+long_desc: "{{ cookiecutter.long_desc }}"
